--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
 		"@babel/polyfill": "^7.7.0",
 		"@babel/register": "^7.7.4",
 		"@babel/runtime": "^7.7.4",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"pg": "^7.14.0",
 		"pg-hstore": "^2.3.3",
-		"sequelize": "^5.21.2"
+		"sequelize": "^5.21.2",
+		"uuid": "^3.3.3"
 	}
 }
