--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"pg": "^7.14.0",
 		"pg-hstore": "^2.3.3",
 		"sequelize": "^5.21.2",
-		"uuid": "^3.3.3"
+		"uuid": "^3.3.3",
+		"validator": "^12.1.0"
 	}
 }
